# STM32CMakeTemplate

./: CMakeLists.txt  stm32.cfg
patch/: core_cm3.patch
src/: adc.c  debug.c  delay.c  dma.c  gpio.c  helpers.h  i2c.c  irq_handlers.c  main.c  stm32.c  stm32.h  syscalls.c  timer.c  usart.c
src/device/: icm42688p.c  icm42688p.h  w25qxx.c  w25qxx.h
src/driver/: adc.c  debug.c  dma.c  flash.c  gpio.c  i2c.c  irq_handlers.c  pwr.c  rtc.c  spi.c  stm32.h  syscalls.c  system_stm32f10x.c  tim.c  timer.c  usart.c
